[package]
name = "maelstrom-echo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maelstrom-lib = { path = "../maelstrom-lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
